# cppcourse-brunel

./: .gitignore  CMakeLists.txt  Graphs.py  READ_ME.txt
docs/: Doxyfile.in
inc/: Neuron.hpp  Simulation.hpp
src/: Neuron.cpp  Neuron_unittest.cpp  Simulation.cpp  main.cpp
